@@ -4992,6 +4992,12 @@ and returns a \typ{COL}.
 \fun{GEN}{FpXM_FpXQV_eval}{GEN M, GEN V,GEN T,GEN p} applies
 \kbd{FpX\_FpXQV\_eval} to all elements of the matrix $M$.
 
+\subsec{\kbd{FpXC}, \kbd{FpXM}}
+
+\fun{GEN}{FpXC_center}{GEN C, GEN p, GEN pov2}
+
+\fun{GEN}{FpXM_center}{GEN M, GEN p, GEN pov2}
+
 \subsec{\kbd{FpXX}, \kbd{FpXY}}
 Contrary to what the name implies, an \kbd{FpXX} is a \typ{POL} whose
 coefficients are either \typ{INT}s or \kbd{FpX}s. This reduces memory
